--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -18,5 +18,5 @@ h3
 h3
 	= t('groups.show.member')
 ul
-  - group.people.each do |person|
-    li= person.name
+  - group.people_with_all_subgroup.each do |person|
+    li= "#{person.name} - #{person.group_list}"
