--- a/app/views/card_histories/show.html.slim
+++ b/app/views/card_histories/show.html.slim
@@ -5,7 +5,7 @@
   = " "
   = link_to t('common.title.list'), :card_histories
 
-h3= "Payroll Category"
+h3 카드 사용내역 정보
 .box
   dl
     dt= CardHistory.human_attribute_name(:transacted_at)
