--- a/app/views/creditcards/index.html.slim
+++ b/app/views/creditcards/index.html.slim
@@ -5,6 +5,8 @@
   = " "
   = link_to t('card_approved_sources.index.title'), card_approved_sources_path
   = " "
+  = link_to t('card_histories.title'), :card_histories
+  = " "
   = link_to t("creditcards.excel.link"), [:excel, :creditcards]
   = " "
   = link_to t("common.title.new"), new_creditcard_path
