--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "jquery.formatCurrency-1.4.0.js" %>
   <%= yield :javascript %>
+  <meta name="viewport" content="width=device-width; initial-scale=1.0, maximum-scale=1.0, account-scalable=no"/>
   <%= csrf_meta_tag %>
 </head>
 <body>
