--- a/app/views/main/_this_week.html.slim
+++ b/app/views/main/_this_week.html.slim
@@ -3,18 +3,19 @@ div.this_week
     div class={today_css day}
       - today_v = @vacations.select {|v| v.in? day}
       - holidays = @holidays.select { |h| h.theday.to_date == day }
-      h2 class={holiday_css holidays, day} = l day, format: :compact_long
-      ul
+      h3 class={holiday_css holidays, day} = l day, format: :compact_long
+      ul.unstyled
         - holidays.each do |h|
           li class={holiday_css holidays, day} = h.dayname
         -  unless holiday? holidays, day
           - today_v.each do |tv|
             - unless tv.vacation == nil
               li
-                = t("used_vacations.vacation")
-                = tv.vacation.employee.fullname
                 - if tv.type
-                  = "(#{tv.type.title})"
+                  = "#{tv.type.title}" + " : "
+                - else
+                  = t("used_vacations.vacation")
+                = tv.vacation.employee.fullname
   center
     '  &laquo;
     = link_to t("main.index.prevweek"), root_path(page: @page - 1)
