--- a/app/views/main/_main_menu3.html.slim
+++ b/app/views/main/_main_menu3.html.slim
@@ -5,7 +5,7 @@ div.container
 				' 미결제 목록 (결재대기중)
 			p
 				ul
-					li
-						' 연차관리 : <strong>홍길동</strong> - 2012-09-12 ~ 2012-09-15 - 1.5 일간 스마트워크
+					- @reports.each do |report|
+						li= link_to report.target.summary, report.target
 		div.span4
 			= render partial: "this_week"
