--- a/app/views/used_vacations/show.html.slim
+++ b/app/views/used_vacations/show.html.slim
@@ -1,22 +1,22 @@
 #show_command
   - if current_person.admin?
-    = link_to t('common.title.edit'), [:edit, vacation, used_vacation]
+    = link_to t('common.title.edit'), [:edit, @used_vacation.vacation, @used_vacation]
     = " "
-    = link_to t('common.title.destroy'), [vacation, used_vacation], :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
+    = link_to t('common.title.destroy'), [@used_vacation.vacation, @used_vacation], :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
     = " "
-  = link_to t('common.title.list'), vacation_path(vacation.employee)
+  = link_to t('common.title.list'), vacation_path(@used_vacation.vacation.employee)
 
 h2= t('.title')
 
 .box
   dl
-    = dtdd used_vacation, "type_title"
-    = dtdd used_vacation, "from"
-    = dtdd used_vacation, "to"
+    = dtdd @used_vacation, "type_title"
+    = dtdd @used_vacation, "from"
+    = dtdd @used_vacation, "to"
     dt
-      = used_vacation.class.human_attribute_name('period')
+      = @used_vacation.class.human_attribute_name('period')
     dd
-      = "#{used_vacation.period} #{t('datetime.prompts.day')}"
-    = dtdd used_vacation, "note"
+      = "#{@used_vacation.period} #{t('datetime.prompts.day')}"
+    = dtdd @used_vacation, "note"
 
-= render 'reports/info', target: used_vacation
+= render 'reports/info', target: @used_vacation
