--- a/app/views/oversea_card_approved_histories/index.html.slim
+++ b/app/views/oversea_card_approved_histories/index.html.slim
@@ -1,48 +1,9 @@
 #show_command
+  = link_to t('common.title.excel'), [:excel, :oversea_card_approved_histories]
+  = " "
   = link_to t('common.title.new'), [:new, :oversea_card_approved_history]
   = " "
   = link_to t('common.title.back'), :creditcards
 
 h2 카드 승인내역
-
-- unless @approved_histories.empty?
-  table#list-table
-    tr
-      th= OverseaCardApprovedHistory.human_attribute_name("used_at")
-      th= OverseaCardApprovedHistory.human_attribute_name("approved_number")
-      th= OverseaCardApprovedHistory.human_attribute_name("card_name")
-      th= OverseaCardApprovedHistory.human_attribute_name("card_holder_name")
-      th= OverseaCardApprovedHistory.human_attribute_name("store_name")
-      th= OverseaCardApprovedHistory.human_attribute_name("money")
-      th= OverseaCardApprovedHistory.human_attribute_name("money_locale")
-      th= OverseaCardApprovedHistory.human_attribute_name("money_locale_currency")
-      th= OverseaCardApprovedHistory.human_attribute_name("money_locale_name")
-      th= OverseaCardApprovedHistory.human_attribute_name("money_us")
-      th= OverseaCardApprovedHistory.human_attribute_name("used_type")
-      th= OverseaCardApprovedHistory.human_attribute_name("card_type")
-      th= OverseaCardApprovedHistory.human_attribute_name("refused_at")
-      th= OverseaCardApprovedHistory.human_attribute_name("purchase_status")
-      th= OverseaCardApprovedHistory.human_attribute_name("will_be_paied_at")
-      th.link_button_area
-      - @approved_histories.all.each do |approved_history|
-        tr.selectable.link_to*{"data-url" => oversea_card_approved_history_path(approved_history)}
-          td= approved_history.used_at
-          td= approved_history.approved_number
-          td= approved_history.card_name
-          td= approved_history.card_holder_name
-          td= approved_history.store_name
-          td= number_to_currency approved_history.money
-          td= number_to_currency approved_history.money_locale
-          td= number_to_currency approved_history.money_locale_currency
-          td= number_to_currency approved_history.money_locale_name
-          td= number_to_currency approved_history.money_us
-          td= approved_history.used_type
-          td= approved_history.card_type
-          td= approved_history.refused_at
-          td= approved_history.purchase_status
-          td= approved_history.will_be_paied_at
-          td.link_button_area
-            = link_to t('common.button.detail_veiw'), approved_history, class: 'btn btn-primary'
-
-- else
-  h4= t('.empty')
+= render 'list', menu: true
