--- a/app/views/shinhan_card_used_histories/_list.html.slim
+++ b/app/views/shinhan_card_used_histories/_list.html.slim
@@ -1,12 +1,3 @@
-#show_command
-  = link_to t('common.title.excel'), [:excel, :shinhan_card_used_histories]
-  = " "
-  = link_to t('common.title.new'), [:new, :shinhan_card_used_history]
-  = " "
-  = link_to t('common.title.back'), :creditcards
-
-h2 카드 승인내역
-
 - unless @used_histories.empty?
   table#list-table
     tr
@@ -25,9 +16,11 @@ h2 카드 승인내역
       th= ShinhanCardUsedHistory.human_attribute_name("tax")
       th= ShinhanCardUsedHistory.human_attribute_name("tip")
       th= ShinhanCardUsedHistory.human_attribute_name("store_name")
-      th.link_button_area
-      - @used_histories.all.each do |used_history|
-        tr.selectable.link_to*{"data-url" => shinhan_card_used_history_path(used_history)}
+      - if menu
+        th.link_button_area
+      - @used_histories.each do |used_history|
+        - data = menu ? {"data-url" => shinhan_card_used_history_path(used_history)} : {}
+        tr.selectable.link_to*data
           td= used_history.card_no
           td= used_history.bank_account
           td= used_history.bank_name
@@ -43,8 +36,9 @@ h2 카드 승인내역
           td= number_to_currency used_history.tax
           td= number_to_currency used_history.tip
           td= used_history.store_name
-          td.link_button_area
-            = link_to t('common.button.detail_veiw'), used_history, class: 'btn btn-primary'
+          - if menu
+            td.link_button_area
+              = link_to t('common.button.detail_veiw'), used_history, class: 'btn btn-primary'
 
 - else
   h4= t('.empty')
