apply raw search form #10874

--- a/app/views/oversea_card_approved_histories/index.html.slim
+++ b/app/views/oversea_card_approved_histories/index.html.slim
@@ -1,3 +1,5 @@
+= render 'card_histories/raw_select_form'
+
 #show_command
   = link_to t('common.title.excel'), [:excel, :oversea_card_approved_histories]
   = " "
