associate card history to credit card #10874

--- a/app/views/card_histories/index.html.slim
+++ b/app/views/card_histories/index.html.slim
@@ -1,7 +1,7 @@
 #show_command
   .btn-group
     = link_to t("common.title.new"), [:new, :card_history]
-    = link_to "카드 이용내역 생성", [:generate, :card_histories], method: :post
+    = link_to "카드 사용내역 생성", [:generate, :card_histories], method: :post
 
 h2 ...
 
