--- a/app/views/hyundai_card_approved_histories/index.html.slim
+++ b/app/views/hyundai_card_approved_histories/index.html.slim
@@ -5,7 +5,7 @@
   = " "
   = link_to t('common.title.new'), [:new, :hyundai_card_approved_history]
   = " "
-  = link_to t('common.title.back'), :creditcards
+  = link_to t('common.title.back'), :card_histories
 
 h2 카드 승인내역
 = render 'list', menu: true
