--- a/app/views/oversea_card_approved_histories/_list.html.slim
+++ b/app/views/oversea_card_approved_histories/_list.html.slim
@@ -21,7 +21,7 @@
       - @approved_histories.each do |approved_history|
         - data = menu ? {"data-url" => oversea_card_approved_history_path(approved_history)} : {}
         tr.selectable.link_to*data
-          td= approved_history.used_at
+          td=l approved_history.used_at
           td= approved_history.approved_number
           td= approved_history.card_name
           td= approved_history.card_holder_name
@@ -33,9 +33,9 @@
           td= number_to_currency approved_history.money_us
           td= approved_history.used_type
           td= approved_history.card_type
-          td= approved_history.refused_at
+          td=l approved_history.refused_at
           td= approved_history.purchase_status
-          td= approved_history.will_be_paied_at
+          td=l approved_history.will_be_paied_at
           - if menu
             td.link_button_area
               = link_to t('common.button.detail_veiw'), approved_history, class: 'btn btn-primary'
