--- a/app/views/cardbills/_detail.html.slim
+++ b/app/views/cardbills/_detail.html.slim
@@ -1,9 +1,7 @@
 #show_command
-  - if target.used and current_person.permission? :card_used_sources
-    = link_to t('cardbills.show.to_use'), target.used
+  - if current_person.permission? :card_histories
+    = link_to "사용내역 보기", target.card_history
     = " "
-  - if target.approved and current_person.permission? :card_approved_sources
-    = link_to t('cardbills.show..to_approved'), target.approved
 h3
   = t('cardbills.detail.title')
 
