--- a/app/views/cardbills/show.html.slim
+++ b/app/views/cardbills/show.html.slim
@@ -1,7 +1,7 @@
 - title t('.title')
 
 #show_command
-  -  if @cardbill.status == 'verified' and @cardbill.remain_amount_for_expense_report != 0
+  -  if @cardbill.remain_amount_for_expense_report != 0
     = link_to t('cardbills.show.create_expense'), new_expense_report_path(target_type: @cardbill.class, target_id: @cardbill.id, expensed_at: @cardbill.transdate, amount: @cardbill.remain_amount_for_expense_report)
     = " "
   = link_to t('common.title.edit'), edit_cardbill_path(@cardbill)
