--- a/app/views/taxbills/total.html.slim
+++ b/app/views/taxbills/total.html.slim
@@ -8,7 +8,7 @@
 
   - purchase_list = @purchases.where(transacted_at: between).group_by_name_anx_tax
   - sales_list = @sales.where(transacted_at: between).group_by_name_anx_tax
-  - card_list = @cards.where(approved_at: between).group_by_name_anx_tax
+  - card_list = @cards.where(transacted_at: between).group_by_name_and_tax
 
   - header = Array.new([purchase_list.size, sales_list.size, card_list.size].max)
 
