fix failed integration test

--- a/app/views/card_histories/generate_form.html.slim
+++ b/app/views/card_histories/generate_form.html.slim
@@ -8,4 +8,4 @@ h2= t('.title')
     = label_tag :owner, t('.owner')
     = select_tag :owner, options_for_people_and_group_select
   p
-    = submit_tag t('.submit')
+    = submit_tag "카드영수증 생성"
