--- a/app/views/main/_main_menu3.html.slim
+++ b/app/views/main/_main_menu3.html.slim
@@ -7,6 +7,11 @@ div.container
 				ul
 					- @reports.each do |report|
 						- if report.target
-							li= link_to report.target.summary, report.target
+							li
+								- if report.status == :reporting
+									span.label.label-info= report.status
+								- else
+									span.label.label-warning= report.status
+								= link_to report.target.summary, report.target
 		div.span4
 			= render partial: "this_week"
