--- a/app/views/used_vacations/show.html.slim
+++ b/app/views/used_vacations/show.html.slim
@@ -1,5 +1,5 @@
 #show_command
-  - if current_person.admin?
+  - if [:not_reported, :rollback].include? @used_vacation.report.status or current_person.admin?
     = link_to t('common.title.edit'), [:edit, @used_vacation.vacation, @used_vacation]
     = " "
     = link_to t('common.title.destroy'), [@used_vacation.vacation, @used_vacation], :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
