--- a/app/views/card_histories/generate_form.html.slim
+++ b/app/views/card_histories/generate_form.html.slim
@@ -3,7 +3,7 @@
 
 h2= t('.title')
 
-= form_tag [:generate, :card_histories] do
+= form_tag [:generate_cardbill, :card_histories] do
   p
     = label_tag :owner, t('.owner')
     = select_tag :owner, options_for_people_and_group_select
