--- a/app/views/payment_requests/index.html.slim
+++ b/app/views/payment_requests/index.html.slim
@@ -1,3 +1,7 @@
+- content_for :search do
+  = form_tag({:action => "index"}, :method => :get) do
+    = select_tag :complete, options_for_select({'미지급 항목 보기' => false, '지급 항목 보기' => true}, params[:complete]), "onchange" => "this.form.submit()"
+
 #show_command
   .btn-group
     = link_to t("common.title.new"), [:new, :payment_request]
@@ -25,6 +29,7 @@ table#list-table
 
 center
   = will_paginate @payment_requests
+
 #export-menu
   = t('common.export') + " : "
-  = link_to t('bank_transfers.export.excel'), [:export, :payment_requests], method: :post
+  = link_to t('bank_transfers.export.excel'), export_payment_requests_path(complete: params[:complete]), method: :post
