--- a/app/views/payment_records/index.html.slim
+++ b/app/views/payment_records/index.html.slim
@@ -7,11 +7,13 @@ table#list-table
     th= PaymentRecord.human_attribute_name('name')
     th= PaymentRecord.human_attribute_name('amount')
     th= PaymentRecord.human_attribute_name('bankbook')
+    th= PaymentRequest.human_attribute_name(:request_status)
     th.link_button_area
     - @payment_records.each do |record|
       tr.selectable.link_to*{"data-url" => payment_record_path(record)}
         td=h record.name
         td= number_to_currency record.amount
         td=h record.bankbook.name rescue ""
+        td= record.request_status
         td.link_button_area
           = link_to t('common.button.detail_veiw'), record, class: 'btn btn-primary'
