--- a/app/views/dayworker_taxes/show.html.slim
+++ b/app/views/dayworker_taxes/show.html.slim
@@ -9,6 +9,8 @@
   = link_to t('common.title.edit'), edit_dayworker_taxis_path(dayworker_tax)
   = " "
   = link_to t('common.title.list'), dayworker_taxes_path
+  = " "
+  = link_to t('common.title.destroy'), dayworker_tax, method: :delete, confirm: "Are you sure?"
 
 h2= t('common.title.show')
 
