--- a/app/views/payments/_form.html.slim
+++ b/app/views/payments/_form.html.slim
@@ -18,6 +18,9 @@ h2
         = f.date_select :pay_finish, :order => [:year, :month, :day]
     - else
       p
+        = f.label :pay_start
+        = f.date_select :pay_start, :order => [:year, :month, :day]
+      p
         = f.label :pay_finish, t('activerecord.attributes.payment.pay_at')
         = f.date_select :pay_finish, :order => [:year, :month, :day]
     p
