--- a/app/views/payrolls/index.html.slim
+++ b/app/views/payrolls/index.html.slim
@@ -1,13 +1,15 @@
-- content_for :search do
-  = form_tag :payrolls, method: :get do
-    = select_tag :period, options_for_payroll_period_select(params[:period]), "onchange" => "this.form.submit()"
+- if current_person.admin?
+  - content_for :search do
+    = form_tag :payrolls, method: :get do
+      = select_tag :period, options_for_payroll_period_select(params[:period]), "onchange" => "this.form.submit()"
 
 #show_command
-  = link_to t("payroll_categories.title"), :payroll_categories
-  = " "
-  = link_to "급여대장 생성", [:generate_form, :payrolls]
-  = " "
-  = link_to t('common.title.new'), [:new, :payroll]
+  - if current_person.admin?
+    = link_to t("payroll_categories.title"), :payroll_categories
+    = " "
+    = link_to "급여대장 생성", [:generate_form, :payrolls]
+    = " "
+    = link_to t('common.title.new'), [:new, :payroll]
 
 h2 ...
 
