--- a/app/views/payrolls/show.html.slim
+++ b/app/views/payrolls/show.html.slim
@@ -1,5 +1,7 @@
 
 #show_command
+  = link_to "지급청구 보기", payroll.payment_request
+  = " "
   - if current_person.admin?
     = link_to t("common.title.new"), new_payroll_payroll_item_path(payroll)
     = " "
